--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
+    "@react-oauth/google": "^0.8.0",
     "@table-library/react-table-library": "^4.0.29",
+    "jose": "^4.13.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.8.2",
     "sort-by": "^1.2.0"
   },
