--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,7 @@
     "@chakra-ui/react": "^2.5.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@react-oauth/google": "^0.8.0",
-    "@table-library/react-table-library": "^4.0.29",
+    "@supabase/supabase-js": "^2.10.0",
     "framer-motion": "^10.2.3",
     "jose": "^4.13.1",
     "localforage": "^1.10.0",
